draco_trunk/llvm_c_api/core_h.ads


   function LLVMGetNextGlobal (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:678
   pragma Import (C, LLVMGetNextGlobal, "LLVMGetNextGlobal");

   function LLVMGetPreviousGlobal (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:679
   pragma Import (C, LLVMGetPreviousGlobal, "LLVMGetPreviousGlobal");

   procedure LLVMDeleteGlobal (arg1 : LLVMValueRef);  -- Core.h:680
   pragma Import (C, LLVMDeleteGlobal, "LLVMDeleteGlobal");

   function LLVMGetInitializer (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:681
   pragma Import (C, LLVMGetInitializer, "LLVMGetInitializer");

   procedure LLVMSetInitializer (arg1 : LLVMValueRef; arg2 : LLVMValueRef);  -- Core.h:682
   pragma Import (C, LLVMSetInitializer, "LLVMSetInitializer");

   function LLVMIsThreadLocal (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:683
   pragma Import (C, LLVMIsThreadLocal, "LLVMIsThreadLocal");

   procedure LLVMSetThreadLocal (arg1 : LLVMValueRef; arg2 : LLVMBool);  -- Core.h:684
   pragma Import (C, LLVMSetThreadLocal, "LLVMSetThreadLocal");

   function LLVMIsGlobalConstant (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:685
   pragma Import (C, LLVMIsGlobalConstant, "LLVMIsGlobalConstant");

   procedure LLVMSetGlobalConstant (arg1 : LLVMValueRef; arg2 : LLVMBool);  -- Core.h:686
   pragma Import (C, LLVMSetGlobalConstant, "LLVMSetGlobalConstant");

  -- Operations on aliases
   function LLVMAddAlias
     (arg1 : LLVMModuleRef;
      arg2 : LLVMTypeRef;
      arg3 : LLVMValueRef;
      arg4 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:689
   pragma Import (C, LLVMAddAlias, "LLVMAddAlias");

  -- Operations on functions
   function LLVMAddFunction
     (M          : LLVMModuleRef;
      Name       : Interfaces.C.Strings.chars_ptr;
      FunctionTy : LLVMTypeRef) return LLVMValueRef;  -- Core.h:693
   pragma Import (C, LLVMAddFunction, "LLVMAddFunction");

   function LLVMGetNamedFunction (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:695
   pragma Import (C, LLVMGetNamedFunction, "LLVMGetNamedFunction");

   function LLVMGetFirstFunction (arg1 : LLVMModuleRef) return LLVMValueRef;  -- Core.h:696
   pragma Import (C, LLVMGetFirstFunction, "LLVMGetFirstFunction");

   function LLVMGetLastFunction (arg1 : LLVMModuleRef) return LLVMValueRef;  -- Core.h:697
   pragma Import (C, LLVMGetLastFunction, "LLVMGetLastFunction");

   function LLVMGetNextFunction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:698
   pragma Import (C, LLVMGetNextFunction, "LLVMGetNextFunction");

   function LLVMGetPreviousFunction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:699
   pragma Import (C, LLVMGetPreviousFunction, "LLVMGetPreviousFunction");

   procedure LLVMDeleteFunction (arg1 : LLVMValueRef);  -- Core.h:700
   pragma Import (C, LLVMDeleteFunction, "LLVMDeleteFunction");

   function LLVMGetIntrinsicID (arg1 : LLVMValueRef) return unsigned;  -- Core.h:701
   pragma Import (C, LLVMGetIntrinsicID, "LLVMGetIntrinsicID");

   function LLVMGetFunctionCallConv (arg1 : LLVMValueRef) return unsigned;  -- Core.h:702
   pragma Import (C, LLVMGetFunctionCallConv, "LLVMGetFunctionCallConv");

   procedure LLVMSetFunctionCallConv (arg1 : LLVMValueRef; arg2 : unsigned);  -- Core.h:703
   pragma Import (C, LLVMSetFunctionCallConv, "LLVMSetFunctionCallConv");

   function LLVMGetGC (arg1 : LLVMValueRef) return Interfaces.C.Strings.chars_ptr;  -- Core.h:704
   pragma Import (C, LLVMGetGC, "LLVMGetGC");

   procedure LLVMSetGC (arg1 : LLVMValueRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:705
   pragma Import (C, LLVMSetGC, "LLVMSetGC");

   procedure LLVMAddFunctionAttr (arg1 : LLVMValueRef; arg2 : LLVMAttribute);  -- Core.h:706
   pragma Import (C, LLVMAddFunctionAttr, "LLVMAddFunctionAttr");

   function LLVMGetFunctionAttr (arg1 : LLVMValueRef) return LLVMAttribute;  -- Core.h:707
   pragma Import (C, LLVMGetFunctionAttr, "LLVMGetFunctionAttr");

   procedure LLVMRemoveFunctionAttr (arg1 : LLVMValueRef; arg2 : LLVMAttribute);  -- Core.h:708
   pragma Import (C, LLVMRemoveFunctionAttr, "LLVMRemoveFunctionAttr");

  -- Operations on parameters
   function LLVMCountParams (arg1 : LLVMValueRef) return unsigned;  -- Core.h:711
   pragma Import (C, LLVMCountParams, "LLVMCountParams");

   procedure LLVMGetParams (arg1 : LLVMValueRef; arg2 : System.Address);  -- Core.h:712
   pragma Import (C, LLVMGetParams, "LLVMGetParams");

   function LLVMGetParam (arg1 : LLVMValueRef; arg2 : unsigned) return LLVMValueRef;  -- Core.h:713
   pragma Import (C, LLVMGetParam, "LLVMGetParam");

   function LLVMGetParamParent (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:714
   pragma Import (C, LLVMGetParamParent, "LLVMGetParamParent");

   function LLVMGetFirstParam (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:715
   pragma Import (C, LLVMGetFirstParam, "LLVMGetFirstParam");

   function LLVMGetLastParam (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:716
   pragma Import (C, LLVMGetLastParam, "LLVMGetLastParam");

   function LLVMGetNextParam (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:717
   pragma Import (C, LLVMGetNextParam, "LLVMGetNextParam");

   function LLVMGetPreviousParam (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:718
   pragma Import (C, LLVMGetPreviousParam, "LLVMGetPreviousParam");

   procedure LLVMAddAttribute (arg1 : LLVMValueRef; arg2 : LLVMAttribute);  -- Core.h:719
   pragma Import (C, LLVMAddAttribute, "LLVMAddAttribute");

   procedure LLVMRemoveAttribute (arg1 : LLVMValueRef; arg2 : LLVMAttribute);  -- Core.h:720
   pragma Import (C, LLVMRemoveAttribute, "LLVMRemoveAttribute");

   function LLVMGetAttribute (arg1 : LLVMValueRef) return LLVMAttribute;  -- Core.h:721
   pragma Import (C, LLVMGetAttribute, "LLVMGetAttribute");

   procedure LLVMSetParamAlignment (arg1 : LLVMValueRef; arg2 : unsigned);  -- Core.h:722
   pragma Import (C, LLVMSetParamAlignment, "LLVMSetParamAlignment");

  -- Operations on basic blocks
   function LLVMBasicBlockAsValue (arg1 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:725
   pragma Import (C, LLVMBasicBlockAsValue, "LLVMBasicBlockAsValue");

   function LLVMValueIsBasicBlock (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:726
   pragma Import (C, LLVMValueIsBasicBlock, "LLVMValueIsBasicBlock");

   function LLVMValueAsBasicBlock (arg1 : LLVMValueRef) return LLVMBasicBlockRef;  -- Core.h:727
   pragma Import (C, LLVMValueAsBasicBlock, "LLVMValueAsBasicBlock");

   function LLVMGetBasicBlockParent (arg1 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:728
   pragma Import (C, LLVMGetBasicBlockParent, "LLVMGetBasicBlockParent");

   function LLVMCountBasicBlocks (arg1 : LLVMValueRef) return unsigned;  -- Core.h:729
   pragma Import (C, LLVMCountBasicBlocks, "LLVMCountBasicBlocks");

   procedure LLVMGetBasicBlocks (arg1 : LLVMValueRef; arg2 : System.Address);  -- Core.h:730
   pragma Import (C, LLVMGetBasicBlocks, "LLVMGetBasicBlocks");

   function LLVMGetFirstBasicBlock (arg1 : LLVMValueRef) return LLVMBasicBlockRef;  -- Core.h:731
   pragma Import (C, LLVMGetFirstBasicBlock, "LLVMGetFirstBasicBlock");

   function LLVMGetLastBasicBlock (arg1 : LLVMValueRef) return LLVMBasicBlockRef;  -- Core.h:732
   pragma Import (C, LLVMGetLastBasicBlock, "LLVMGetLastBasicBlock");

   function LLVMGetNextBasicBlock (arg1 : LLVMBasicBlockRef) return LLVMBasicBlockRef;  -- Core.h:733
   pragma Import (C, LLVMGetNextBasicBlock, "LLVMGetNextBasicBlock");

   function LLVMGetPreviousBasicBlock (arg1 : LLVMBasicBlockRef) return LLVMBasicBlockRef;  -- Core.h:734
   pragma Import (C, LLVMGetPreviousBasicBlock, "LLVMGetPreviousBasicBlock");

   function LLVMGetEntryBasicBlock (arg1 : LLVMValueRef) return LLVMBasicBlockRef;  -- Core.h:735
   pragma Import (C, LLVMGetEntryBasicBlock, "LLVMGetEntryBasicBlock");

   function LLVMAppendBasicBlockInContext
     (C    : LLVMContextRef;
      Fn   : LLVMValueRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMBasicBlockRef;  -- Core.h:737
   pragma Import (C, LLVMAppendBasicBlockInContext, "LLVMAppendBasicBlockInContext");

   function LLVMInsertBasicBlockInContext
     (C    : LLVMContextRef;
      BB   : LLVMBasicBlockRef;
      Name : Interfaces.C.Strings.chars_ptr) return LLVMBasicBlockRef;  -- Core.h:740
   pragma Import (C, LLVMInsertBasicBlockInContext, "LLVMInsertBasicBlockInContext");

   function LLVMAppendBasicBlock (arg1 : LLVMValueRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMBasicBlockRef;  -- Core.h:744
   pragma Import (C, LLVMAppendBasicBlock, "LLVMAppendBasicBlock");

   function LLVMInsertBasicBlock (arg1 : LLVMBasicBlockRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMBasicBlockRef;  -- Core.h:745
   pragma Import (C, LLVMInsertBasicBlock, "LLVMInsertBasicBlock");

   procedure LLVMDeleteBasicBlock (arg1 : LLVMBasicBlockRef);  -- Core.h:747
   pragma Import (C, LLVMDeleteBasicBlock, "LLVMDeleteBasicBlock");

  -- Operations on instructions
   function LLVMGetInstructionParent (arg1 : LLVMValueRef) return LLVMBasicBlockRef;  -- Core.h:750
   pragma Import (C, LLVMGetInstructionParent, "LLVMGetInstructionParent");

   function LLVMGetFirstInstruction (arg1 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:751
   pragma Import (C, LLVMGetFirstInstruction, "LLVMGetFirstInstruction");

   function LLVMGetLastInstruction (arg1 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:752
   pragma Import (C, LLVMGetLastInstruction, "LLVMGetLastInstruction");

   function LLVMGetNextInstruction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:753
   pragma Import (C, LLVMGetNextInstruction, "LLVMGetNextInstruction");

   function LLVMGetPreviousInstruction (arg1 : LLVMValueRef) return LLVMValueRef;  -- Core.h:754
   pragma Import (C, LLVMGetPreviousInstruction, "LLVMGetPreviousInstruction");

  -- Operations on call sites
   procedure LLVMSetInstructionCallConv (arg1 : LLVMValueRef; arg2 : unsigned);  -- Core.h:757
   pragma Import (C, LLVMSetInstructionCallConv, "LLVMSetInstructionCallConv");

   function LLVMGetInstructionCallConv (arg1 : LLVMValueRef) return unsigned;  -- Core.h:758
   pragma Import (C, LLVMGetInstructionCallConv, "LLVMGetInstructionCallConv");

   procedure LLVMAddInstrAttribute
     (arg1 : LLVMValueRef;
      arg2 : unsigned;
      arg3 : LLVMAttribute);  -- Core.h:759
   pragma Import (C, LLVMAddInstrAttribute, "LLVMAddInstrAttribute");

   procedure LLVMRemoveInstrAttribute
     (arg1 : LLVMValueRef;
      arg2 : unsigned;
      arg3 : LLVMAttribute);  -- Core.h:760
   pragma Import (C, LLVMRemoveInstrAttribute, "LLVMRemoveInstrAttribute");

   procedure LLVMSetInstrParamAlignment
     (arg1 : LLVMValueRef;
      arg2 : unsigned;
      arg3 : unsigned);  -- Core.h:762
   pragma Import (C, LLVMSetInstrParamAlignment, "LLVMSetInstrParamAlignment");

  -- Operations on call instructions (only)
   function LLVMIsTailCall (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:766
   pragma Import (C, LLVMIsTailCall, "LLVMIsTailCall");

   procedure LLVMSetTailCall (arg1 : LLVMValueRef; arg2 : LLVMBool);  -- Core.h:767
   pragma Import (C, LLVMSetTailCall, "LLVMSetTailCall");

  -- Operations on phi nodes
   procedure LLVMAddIncoming
     (arg1 : LLVMValueRef;
      arg2 : System.Address;
      arg3 : System.Address;
      arg4 : unsigned);  -- Core.h:770
   pragma Import (C, LLVMAddIncoming, "LLVMAddIncoming");

   function LLVMCountIncoming (arg1 : LLVMValueRef) return unsigned;  -- Core.h:772
   pragma Import (C, LLVMCountIncoming, "LLVMCountIncoming");

   function LLVMGetIncomingValue (arg1 : LLVMValueRef; arg2 : unsigned) return LLVMValueRef;  -- Core.h:773
   pragma Import (C, LLVMGetIncomingValue, "LLVMGetIncomingValue");

   function LLVMGetIncomingBlock (arg1 : LLVMValueRef; arg2 : unsigned) return LLVMBasicBlockRef;  -- Core.h:774
   pragma Import (C, LLVMGetIncomingBlock, "LLVMGetIncomingBlock");
